workshop03/istio/gateway.yaml
apiVersion: v1
kind: Gateway
metadata:
  name: pythondemoapp-ingress
  namespace: default
spec:
  selector:
    istio: ingressgateway #controller(shld be sufficient), 
    # you can also implement your own controller
  servers:
    hosts: 
    - 
    ports:
    - name: http
      port: 80
      targetPort: 6000
