workshop03/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demopythonappvs1
  namespace: default
spec:
  hosts:
    -
  gateways:
    - pythondemoapp-ingress
  http:
    - match:
      - uri:
        exact: /v1/hello
      # uri must be rewritten so that the pod will understand else 404
      rewrite:
        uri: /hello
      route:
        - destination:
          # if implicitly, then it will use the service in 
          # the namespace for this virtual service
          host: demopythonappsvc.default.svc.local # where you wan to route your domain to
          # base on the label/version
          # with subset then need to refer to destination rule
          # else without the subset it will just 
          # round robbin call between the 2 version
          subset: version-1
    - match:
      - uri: 
        exact: /v2/hello
      rewrite:
        uri: /hello
      route:
        - destination:
          host: demopythonappsvc
          subset: version-2
    - match:
      - uri: 
        exact: /v3
      rewrite:
        uri: /topstories
      route:
        - destination:
          host: demopythonappsvc
          subset: version-3
